Geoservices-Completed for Swagger
